ocaml/testsuite/tests/typing-missing-cmi-indirections/test.compilers.reference
File "client.ml", line 2, characters 0-19:
2 | and alias = missing
    ^^^^^^^^^^^^^^^^^^^
Error: 
       The layout of alias is any, because
         a dummy layout used in checking mutually recursive datatypes.
       But the layout of alias must be a sublayout of value, because
         a type argument defaulted to have layout value. 
       No .cmi file found containing Missing.t.
       Hint: Adding "missing" to your dependencies might help.
